--- a/labs/01-fs/wiki/basics.wiki
+++ b/labs/01-fs/wiki/basics.wiki
@@ -1,19 +1,26 @@
 ===== Basics =====
 
-Pentru a începe acest tutorial trebuie să vă asigurați că sunteți în directorul potrivit. Rulați comanda ''cd ~/uso/labs/01-fs/support/basics/''. 
+Pentru a începe acest tutorial trebuie să vă asigurați că sunteți în
+directorul potrivit.
+Rulați comanda ''cd ~/uso/labs/01-fs/support/basics/''. 
 
 ==== Navigarea printr-o ierarhie de directoare ====
-Listarea conținutului directorului curent se face folosind comanda ''ls''.
+Listarea conținutului directorului curent se face folosind comanda
+''ls''.
 
 <code bash>
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ ls
 grotesque  'hacker-s secret'   rookiss  'toddler-s bottle'
 </code>
 
-Observăm că prin utilizarea comenzii ''ls'' putem vedea ce avem în directorul curent, dar nu și în subdirectoarele acestuia. Un mod pentru a putea vizualiza întreaga ierarhie începând cu directorul curent este utilizarea utilitarului ''tree''. Dacă acesta nu este instalat, rulați comanda ''sudo apt-get install tree''.
+Observăm că prin utilizarea comenzii ''ls'' putem vedea ce avem în
+directorul curent, dar nu și în subdirectoarele acestuia. Un mod
+pentru a putea vizualiza întreaga ierarhie începând cu directorul
+curent este utilizarea utilitarului ''tree''.
+Dacă acesta nu este instalat, rulați comanda ''sudo apt-get install tree''.
 
 <code bash>
-[student@uso basics]$ tree .
+student@uso:~/.../01-fs/support/basics$ tree .
 .
 ├── grotesque
 │   ├── asg
@@ -72,31 +79,39 @@ Observăm că prin utilizarea comenzii ''ls'' putem vedea ce avem în directorul
 13 directories, 40 files
 </code>
 
-Vrem să afisăm calea curentă pentru a vedea în ce director ne aflăm. Vom folosi comanda ''pwd''. După aceea, vom lista conținutul directorului pentru a-l inspecta.
+Vrem să afisăm calea curentă pentru a vedea în ce director ne aflăm.
+Vom folosi comanda ''pwd''. După aceea, vom lista conținutul
+directorului pentru a-l inspecta.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/
-[student@uso basics]$ pwd
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/
+student@uso:~/.../01-fs/support/basics$ pwd
 /home/student/uso/labs/01-fs/support/basics
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ ls
 grotesque  'hacker-s secret'   rookiss  'toddler-s bottle'
 </code>
 
-De multe ori avem nevoie să ne plasăm cu un director în spate. Pentru a ajunge în directorul părinte folosim comanda ''cd ..''. E bine să verificăm de fiecare dată că ne aflăm în directorul în care trebuie.
+De multe ori avem nevoie să ne plasăm cu un director în spate.
+Pentru a ajunge în directorul părinte folosim comanda ''cd ..''.
+E bine să verificăm de fiecare dată că ne aflăm în directorul în care
+trebuie.
 
 <code bash>
-[student@uso basics]$ pwd
+student@uso:~/.../01-fs/support/basics$ pwd
 /home/student/uso/labs/01-fs/support/basics
-[student@uso basics]$ cd ..
-[student@uso basics]$ pwd
+student@uso:~/.../01-fs/support/basics$ cd ..
+student@uso:~/uso/labs/01-fs/support$ pwd
 /home/student/uso/labs/01-fs/support
 </code>
 
-După folosirea comenzii ''tree'' știm întreaga ierarhie și cunoaștem calea pană la un anumit subdirector. Vrem să ajungem acolo. Putem face asta prin comenzi succesive de tipul ''cd subdirector'' sau putem folosi o singură comandă pentru a ne ușura munca.
+După folosirea comenzii ''tree'' știm întreaga ierarhie și cunoaștem
+calea pană la un anumit subdirector. Vrem să ajungem acolo. Putem face
+asta prin comenzi succesive de tipul ''cd subdirector'' sau putem
+folosi o singură comandă pentru a ne ușura munca.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/
-[student@uso basics]$ tree .
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/
+student@uso:~/.../01-fs/support/basics$ tree .
 .
 ├── grotesque
 │   ├── asg
@@ -153,41 +168,53 @@ După folosirea comenzii ''tree'' știm întreaga ierarhie și cunoaștem calea 
     └── random
 
 13 directories, 40 files
-[student@uso basics]$ cd grotesque/do<TAB>
-[student@uso basics]$ pwd
+student@uso:~/.../01-fs/support/basics$ cd grotesque/do<TAB>
+student@uso:~/.../basics/grotesque/do you dare$ pwd
 /home/student/uso/labs/01-fs/support/basics/grotesque/do you dare
 </code>
 
-Câteodată vrem să ne plasăm într-un alt subdirector din ierarhia mare care nu se află în calea curentă. Avem iarăși de ales între pași mici, succesivi sau folosirea unei sigure comenzi pentru a ne poziționa altundeva.
+Câteodată vrem să ne plasăm într-un alt subdirector din ierarhia
+mare care nu se află în calea curentă. Avem iarăși de ales între
+pași mici, succesivi sau folosirea unei sigure comenzi pentru a ne
+poziționa altundeva.
 
 <code bash>
-[student@uso basics]$ pwd
+student@uso:~/.../basics/grotesque/do you dare$ pwd
 /home/student/uso/labs/01-fs/support/basics/grotesque/do you dare
-[student@uso basics]$ cd ../../rookiss
-[student@uso basics]$ pwd
+student@uso:~/.../basics/grotesque/do you dare$ cd ../../rookiss
+student@uso:~/.../support/basics/rookiss$ pwd
 /home/student/uso/labs/01-fs/support/basics/rookiss
 </code>
 
-Până acum ne-am jucat cu ierarhia dată de echipa de USO, dar cum facem dacă vrem să ajungem în directorul ''/usr/local''? Folosim o cale **absolută** pentru a naviga direct acolo fără a ne face griji de directorul în care ne aflăm, cât va trebui să ne deplasăm în spate (sau în față) pentru a ajunge unde vrem.
+Până acum ne-am jucat cu ierarhia dată de echipa de USO, dar cum
+facem dacă vrem să ajungem în directorul ''/usr/local''? Folosim o
+cale **absolută** pentru a naviga direct acolo fără a ne face griji
+de directorul în care ne aflăm, cât va trebui să ne deplasăm în spate
+(sau în față) pentru a ajunge unde vrem.
 
 <code bash>
-[student@uso basics]$ cd /usr/local
-[student@uso basics]$ pwd
+student@uso:~/.../support/basics/rookiss$ cd /usr/local
+student@uso:/usr/local$ pwd
 /usr/local
 </code>
 
-Pentru a ajunge în directorul home al utilizatorului curent de oriunde ne-am afla, folosim:
+Pentru a ajunge în directorul home al utilizatorului curent de
+oriunde ne-am afla, folosim:
 
 <code bash>
-[student@uso basics]$ cd ~ # 'tilda'
-[student@uso basics]$ pwd
+student@uso:/usr/local$ cd ~ # 'tilda'
+student@uso:~$ pwd
 /home/student
 </code>
 
-Până a trece mai departe, trebuie să vă asigurați că ați înțeles cum trebuie navigarea printr-o ierarhie de directoare. Pentru asta, parcurgeți următoarele exerciții după care verificați cu asistentul că totul este în regulă.
+Până a trece mai departe, trebuie să vă asigurați că ați înțeles cum
+trebuie navigarea printr-o ierarhie de directoare. Pentru asta,
+parcurgeți următoarele exerciții după care verificați cu asistentul
+că totul este în regulă.
 
     - Plasați-va în directorul ''hacker-s\ secret/medium''.
-    - Navigați în sistemul de fișiere către directorul ''toddler-s\ bottle/bof/boeasy''  pornind din directorul home al utilizatorului curent.
+    - Navigați în sistemul de fișiere către directorul
+    ''toddler-s\ bottle/bof/boeasy''  pornind din directorul home al utilizatorului curent.
     - Ajungeți înapoi în directorul home al utilizatorului curent fără a folosi simbolul **tilda**(~).
 
 ==== Listarea fișierelor dintr-un director ====
@@ -196,7 +223,7 @@ Plasați-vă din nou în directorul ''/uso/labs/01-fs/support/basics''.
 După cum am observat mai sus, listarea unui director se poate face folosind comanda ''ls''. Această formă de utilizator nu ne prezintă foarte multe informații despre fișierele din directorul inspectat (dimensiune, drepturi, tip, etc.). Folosind argumentul ''-l'' al lui ''ls'' putem lista conținutul unui director în format lung.
 
 <code bash>
-[student@uso basics]$ ls -l
+student@uso:~/.../01-fs/support/basics$ ls -l
 total 16
 drwxr-xr-x 3 student student 4096 aug 21 22:17  grotesque
 drwxr-xr-x 5 student student 4096 aug 21 22:17 'hacker-s secret'
@@ -207,38 +234,35 @@ drwxr-xr-x 4 student student 4096 aug 21 22:17 'toddler-s bottle'
 Putem lista conținutul unui director altul decât cel în care ne aflăm dacă dăm comenzii ''ls'', ca argument, calea către acesta (fie absolută, fie relativă).
 
 <code bash>
-[student@uso basics]$ ls hacker-s\ secret/hard/
+student@uso:~/.../01-fs/support/basics$ ls hacker-s\ secret/hard/
 malware     pwnsandbox
 </code>
 
 Utilizarea simplă a comenzii ''ls'' fără a-i da un argument special nu ne afisează fișierele acunse dintr-un director. Pentru asta, folosim argumentul ''-a''. De remarcat, numele fișierelor ascunse încep cu ''.''.
 
-<WRAP center round tip 60%>
+<note tip>
 ''.'' reprezintă directorul curent, iar ''..'' reprezintă directorul părinte.
-</WRAP>
+</note>
 
 <code bash>
-[student@uso basics]$ cd hacker-s\ secret/really\ hard/
-[student@uso basics]$ ls -a
+student@uso:~/.../01-fs/support/basics$ cd hacker-s\ secret/really\ hard/
+student@uso:~/.../basics/hacker-s secret/really hard$ ls -a
 .  ..  .unexploitable  exploitable  nuclear
 </code>
 
-Câteodată un director poate avea foarte multe intrări, iar noi să dorim inspectăm doar o parte dintre ele. Spre exemplu, vrem să aflăm mai multe informații despre fișierele cu extensia ''.pdf''. Pentru asta, vom folosi **wilecards**.
+Câteodată un director poate avea foarte multe intrări, iar noi să dorim inspectăm doar o parte dintre ele. Spre exemplu, vrem să aflăm mai multe informații despre fișierele cu extensia ''.pdf''. Pentru asta, vom folosi **wildcards**.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
-[student@uso basics]$ cd rookiss
-[student@uso basics]$ pwd
+student@uso:~/.../basics/hacker-s secret/really hard$ cd ~/uso/labs/01-fs/support/basics
+student@uso:~/.../01-fs/support/basics$ cd rookiss
+student@uso:~/.../support/basics/rookis$ pwd
 /home/student/uso/labs/01-fs/support/basics/rookiss
-[student@uso basics]$ ls *.pdf
+student@uso:~/.../support/basics/rookis$ ls *.pdf
 'ascii easy.pdf'   fix.pdf   otp.pdf
 </code>
 
 Până a trece mai departe, trebuie să vă asigurați că ați înțeles și reținut cum puteți lista conținutul unui director sub diverse forme. Pentru asta, parcurgeți următoarele exerciții după care verificați cu asistentul că totul este în regulă. Recomandăm folosirea paginii de manual pentru utilitarul ''ls'' (''man ls''). Vă va da informații despre toate argumentele pe care le puteți da comenzii ''ls''.
-
-<WRAP center round tip 60%>
 Putem da oricate argumente comenzii ''ls'', fie sub forma ''ls -a -b -c'', fie ''ls -abc''.
-</WRAP>
 
     - Să se listeze in format lung conținutul directorului ''grotesque/do\ you\ dare/'' cu afișarea dimensiunii fișierelor în format human readable. (Hint: ''man ls'' și căutați după șirul ''human readable'').
     - Afișati conținutul directorului ''toddler-s\ bottle/'' cu afișarea unui simbol pentru tipul de fișier. Remarcați diferențele dintre fișiere. (Hint: ''classify'')
@@ -252,11 +276,11 @@ Putem da oricate argumente comenzii ''ls'', fie sub forma ''ls -a -b -c'', fie '
 Pentru a crea un nou director în directorul curent folosim comanda ''mkdir''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics
+student@uso:~/.../01-fs/support/basics$ ls
 grotesque  'hacker-s secret'   rookiss  'toddler-s bottle'
-[student@uso basics]$ mkdir my-new-folder
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ mkdir my-new-folder
+student@uso:~/.../01-fs/support/basics$ ls
 grotesque  'hacker-s secret'   my-new-folder   rookiss  'toddler-s bottle'
 </code>
 
@@ -264,16 +288,16 @@ grotesque  'hacker-s secret'   my-new-folder   rookiss  'toddler-s bottle'
 
 Varianta 1:
 <code bash>
-[student@uso basics]$ mkdir "weird directory"
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ mkdir "weird directory"
+student@uso:~/.../01-fs/support/basics$ ls
 grotesque          my-new-folder  'toddler-s bottle'
 'hacker-s secret'   rookiss        'weird directory'
 </code>
 
 Varianta 2:
 <code bash>
-[student@uso basics]$ mkdir weird\ directory\ 2
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ mkdir weird\ directory\ 2
+student@uso:~/.../01-fs/support/basics$ ls
  grotesque          my-new-folder  'toddler-s bottle'  'weird directory 2'
 'hacker-s secret'   rookiss        'weird directory'
 </code>
@@ -281,9 +305,9 @@ Varianta 2:
 Intrați în primul director creat. Vrem să creăm un fișier cu conținutul "Hello, world".
 
 <code bash>
-[student@uso basics]$ cd w<TAB>
-[student@uso basics]$ echo "Hello, world" > my_file.txt
-[student@uso basics]$ ls -l
+student@uso:~/.../01-fs/support/basics$ cd w<TAB>
+student@uso:~/.../support/basics/weird directory$ echo "Hello, world" > my_file.txt
+student@uso:$ ls -l
 total 4
 -rw-r--r-- 1 student student 13 aug 21 22:59 my_file.txt
 </code>
@@ -299,12 +323,12 @@ Până a trece mai departe, trebuie să vă asigurați că ați înțeles cum pu
 Pentru a redenumi un fișier folosim comanda ''mv''. Comanda ''mv'' are formatul ''mv sursă destinație''. În cazul în care uitați, folosiți pagina de manual a acesteia.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
+student@uso:~/.../support/basics/toddler-s bottle$ ls
 bof         fd     input      random
 collision   flag   passcode  'third weird directory'
-[student@uso basics]$ mv collision my-new-collision
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ mv collision my-new-collision
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   flag    my-new-collision   random
  fd    input   passcode          'third weird directory'
 </code>
@@ -312,56 +336,56 @@ collision   flag   passcode  'third weird directory'
 Bineînțeles, putem redenumi un fișier aflat într-un alt director.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
-[student@uso basics]$ ls ../grotesque/do\ you\ dare/
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../grotesque/do\ you\ dare/
 ascii  dos4fun  elf  hunter  hunting  mipstake  rootkit
-[student@uso basics]$ mv ../grotesque/do\ you\ dare/mipstake ../grotesque/do\ you\ dare/mistake
-[student@uso basics]$ ls ../grotesque/do\ you\ dare?/
+student@uso:~/.../support/basics/toddler-s bottle$ mv ../grotesque/do\ you\ dare/mipstake ../grotesque/do\ you\ dare/mistake
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../grotesque/do\ you\ dare?/
 ascii  dos4fun  elf  hunter  hunting  mistake  rootkit
 </code>
 
 Folosim tot comanda ''mv'' pentru a muta un fișier într-un alt director.
 
 <code bash>
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   flag    my-new-collision   random
  fd    input   passcode          'third weird directory'
-[student@uso basics]$ ls ../hacker-s\ secret/
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../hacker-s\ secret/
  hard   medium  'really hard'
-[student@uso basics]$ mv my-new-collision ../hacker-s\ secret/ # păstrand numele
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ mv my-new-collision ../hacker-s\ secret/ # păstrand numele
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   fd   flag   input   passcode   random  'third weird directory'
-[student@uso basics]$ ls ../hacker-s\ secret/
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../hacker-s\ secret/
  hard   medium   my-new-collision  'really hard'
 </code>
 
 Există posibilitatea să mutăm un fișier într-un alt director și să-i schimbăm numele în același timp.
 
 <code bash>
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   fd   flag   input   passcode   random  'third weird directory'
-[student@uso basics]$ ls ../hacker-s\ secret/
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../hacker-s\ secret/
  hard   medium   my-new-collision  'really hard'
-[student@uso basics]$ mv flag ../hacker-s\ secret/my-new-flag # schimbând numele
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ mv flag ../hacker-s\ secret/my-new-flag # schimbând numele
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   fd   input   passcode   random  'third weird directory'
-[student@uso basics]$ ls ../hacker-s\ secret/
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../hacker-s\ secret/
  hard   medium   my-new-collision   my-new-flag  'really hard'
 </code>
 
 În cazul în care avem mai multe fișiere de mutat într-un alt (același) director, folosim tot comanda ''mv''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle/
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle/
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   fd   input   passcode   random  'third weird directory'
-[student@uso basics]$ ls ../rookiss/
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../rookiss/
 'ascii easy.pdf'   echo2     loveletter   syscall
 'brain fuck'       fix.pdf   otp.pdf
-[student@uso basics]$ mv fd input ../rookiss
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/toddler-s bottle$ mv fd input ../rookiss
+student@uso:~/.../support/basics/toddler-s bottle$ ls
  bof   passcode   random  'third weird directory'
-[student@uso basics]$ ls ../rookiss
+student@uso:~/.../support/basics/toddler-s bottle$ ls ../rookiss
 'ascii easy.pdf'   echo2   fix.pdf   loveletter   syscall
 'brain fuck'       fd      input     otp.pdf
 </code>
@@ -376,13 +400,13 @@ Până a trece mai departe în cadrul acestei secțiuni, trebuie să ne asigură
 Pentru a redenumi un fișier am văzut că folosim comanda ''mv''. În cazul în care vrem ca noul nume să conțină spații, procedăm ca mai devreme (vezi crearea directoarelor).
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics
+student@uso:~/.../01-fs/support/basics$ ls
  bof1.txt   bof4.txt   'hacker-s secret'  'toddler-s bottle'
  bof2.txt   bof5.txt    my-new-folder     'weird directory'
  bof3.txt   grotesque   rookiss           'weird directory 2'
-[student@uso basics]$ mv rookiss/ "my-new-rookiss"
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basics$ mv rookiss/ "my-new-rookiss"
+student@uso:~/.../01-fs/support/basics$ ls
  bof1.txt   bof4.txt   'hacker-s secret'  'toddler-s bottle'
  bof2.txt   bof5.txt    my-new-folder     'weird directory'
  bof3.txt   grotesque   my-new-rookiss    'weird directory 2'
@@ -391,9 +415,9 @@ Pentru a redenumi un fișier am văzut că folosim comanda ''mv''. În cazul în
 Putem întâlni sitația în care vrem să redenumim un fișier al cărui nume conține deja spații, acestea trebuie escapate ca mai devreme. Putem scrie numele între ghilimele, însă există riscul să greșim în cazul numelor complicate și lungi. Cel mai sigur și ușor este să abuzăm de tasta <TAB> pentru a fi siguri că nu greșim.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
-[student@uso basics]$ mv w<TAB> "weird directory again"
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics
+student@uso:~/.../01-fs/support/basics$ mv w<TAB> "weird directory again"
+student@uso:~/.../01-fs/support/basics$ ls
  bof1.txt   bof4.txt   'hacker-s secret'  'toddler-s bottle'
  bof2.txt   bof5.txt    my-new-folder     'weird directory 2'
  bof3.txt   grotesque   my-new-rookiss    'weird directory again'
@@ -409,21 +433,21 @@ Până a trece mai departe, trebuie să ne asigurăm că ați reținut cum trebu
 Ne-a rămas o singură comandă de bază despre care nu am vorbit, ștergerea. Pentru a șterge un fișier, folosim comanda ''rm''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/grotesque
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics/grotesque
  coin2  'do you dare'   elf   hunter   mistake
-[student@uso basics]$ rm coin2
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/grotesque$ rm coin2
+student@uso:~/.../support/basics/grotesque$ ls
 'do you dare'   elf   hunter   mistake
 </code>
 
 Avem posibilitatea de a șterge fișiere multiple folosind o singură comandă. Pentru asta, va trebui să pasăm ca argument comenzii toate fișierele pe care dorim să le ștergem.
 
 <code bash>
-[student@uso basics]$ ~/uso/labs/01-fs/support/basic/toddler-s\ bottle/bof/easy
-[student@uso basics]$ ls
+student@uso:~$ ~/uso/labs/01-fs/support/basic/toddler-s\ bottle/bof/easy
+student@uso:~/.../toddler-s bottle/bof/easy$ ls
 bof-bof-bof  can-you-bof  random-bof.txt
-[student@uso basics]$ rm bof-bof-bof can-you-bof
-[student@uso basics]$ ls
+student@uso:~/.../toddler-s bottle/bof/easy$ rm bof-bof-bof can-you-bof
+student@uso:~/.../toddler-s bottle/bof/easy$ ls
 random-bof.txt
 </code>
 
@@ -431,31 +455,32 @@ random-bof.txt
 Ne aflăm în directorul ''~/uso/labs/01-fs/support/basics/grotesque'' și vrem să ștergem un fișier dintr-un alt director fără schimba directorul în care ne aflăm. Putem face acest lucru ușor dându-i comenzii ''rm'' calea către acel fișier (fie absolută, fie relativă).
 
 <code bash>
-[student@uso basics]$ ls
+student@uso:~/.../support/basics/grotesque$ ls
 'do you dare'   elf   hunter   mistake
-[student@uso basics]$ rm ../toddler-s\ bottle/bof/medium/getting-serious-here  
-[student@uso basics]$ ls ../toddler-s\ bottle/bof/medium
-[student@uso basics]$
+student@uso:~/.../support/basics/grotesque$ rm ../toddler-s\ bottle/bof/medium/getting-serious-here  
+student@uso:~/.../support/basics/grotesque$ ls ../toddler-s\ bottle/bof/medium
+student@uso:~/.../support/basics/grotesque$
 </code>
 
 În cazul în care vrem să ștergem un întreg director, comanda ''rm <nume_director>'' nu va funcționa. Trebuie să îi precizăm că vrem să ștergem **recursiv** toate fișierele și subdirectoarele din aceasta ierarhie. Pentru acest lucru, folosim argumentul ''-r''
 al comenzii ''rm''.
 Dacă directorul pe care vrem să-l ștergem este gol, putem folosi și
 comanda ''rmdir''.
+
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
-[student@uso basics]$ ls
+student@uso:~$ cd ~/uso/labs/01-fs/support/basics
+student@uso:~/.../01-fs/support/basics$ ls
  bof1.txt   bof5.txt           my-new-rookiss      'weird directory again'
  bof2.txt   grotesque          random-org
  bof3.txt  'hacker-s secret'  'toddler-s bottle'
  bof4.txt   my-new-folder     'weird directory 2'
-[student@uso basics]$ rm -r "weird directory again"
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basic$ rm -r "weird directory again"
+student@uso:~/.../01-fs/support/basic$ ls
  bof1.txt   bof4.txt   'hacker-s secret'   random-org
  bof2.txt   bof5.txt    my-new-folder     'toddler-s bottle'
  bof3.txt   grotesque   my-new-rookiss    'weird directory 2'
-[student@uso basics]$ rmdir weird\ directory\ 2/
-[student@uso basics]$ ls
+student@uso:~/.../01-fs/support/basic$ rmdir weird\ directory\ 2/
+student@uso:~/.../01-fs/support/basic$ ls
  bof1.txt   bof4.txt   'hacker-s secret'   random-org
  bof2.txt   bof5.txt    my-new-folder     'toddler-s bottle'
  bof3.txt   grotesque   my-new-rookiss
